[package]
name = "change_stream"
version = "0.1.0"
edition = "2021"
description = "A Stream that only emits if the value is different."
repository = "https://github.com/andrewlowndes/change_stream"
license = "MIT OR Apache-2.0"
keywords = ["stream", "change", "unique"]
categories = ["asynchronous", "rust-patterns"]

[lib]

[dependencies]
futures = "0.3.27"
pin-project = "1.0.12"

[dev-dependencies]
async-stream = "0.3.4"
multi_stream = "0.1.0"
tokio = { version = "1.26.0", features = ["full", "rt-multi-thread"] }
